welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:2: error: not found: value Pos
while (!Pos(14,8)) {
        ^