welcome.lessons.welcome.loopfor.LoopStairs.scala.code
setPos(0,0);
while (!Pos(14,8)) {
	if (!estFaceMur()) {
		avance();
	} else {
		gauche();
		avance();
		droite();
	}
}

